--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>League Of Legend</title>
 </head>
 <body>
-  <script src="script.js"></script>
+
   <main>
     <section class="RiotClient">
       <div class="riot-login">
@@ -30,7 +30,7 @@
           <p>Manter Login</p>
        </section>
        <section class="acessar">
-          <button></button>
+          <button class="btn-js" disabled></button>
           <p>Não consegue iniciar a sessão?</p>
           <p>Criar conta</p>
        </section>
@@ -40,5 +40,6 @@
       </div>
     </section>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
